[tool.poetry]
name = "iris-exporter"
version = "0.1.0"
description = "Export Iris measurements in multiple formats."
authors = ["Maxime Mouchet <maxime.mouchet@lip6.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.0"
boto3-stubs = {extras = ["s3"], version = "^1.24.0"}
diamond-miner = "^0.9.1"
dioptra-iris-client = "^0.4.3"
dramatiq = {extras = ["redis", "watch"], version = "^1.13.0"}
httpx = "^0.22.0"
orjson = "^3.6.8"
pych-client = {extras = ["orjson"], version = "^0.2.10"}
pydantic = "^1.9.1"
redis = "^4.2.2"
zstandard = "^0.17.0"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
pre-commit = "^2.18.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
types-redis = "^4.2.0"

[tool.pytest.ini_options]
addopts = "--capture=no --doctest-modules --log-cli-level=info --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
