[tool.poetry]
name = "iris-exporter"
version = "0.1.0"
description = ""
authors = ["Maxime Mouchet <maxime.mouchet@lip6.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aioboto3 = "^10.0.0"
diamond-miner = "^1.0.2"
dioptra-iris-client = "^0.4.5"
pych-client = "^0.3.1"
types-aioboto3 = {extras = ["s3"], version = "^9.6.0"}
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

[tool.poetry.scripts]
iris-exporter = "iris_exporter.main:app"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
